--- a/src/systemc/tests/SConscript
+++ b/src/systemc/tests/SConscript
@@ -98,7 +98,8 @@ if env['USE_SYSTEMC']:
                     env['SHARED_LIB'][0].dir.abspath,
                     self.path(env).dir.abspath)
             env.Append(LINKFLAGS=Split('-z origin'))
-            env.Append(RPATH=env.Literal(os.path.join('\\$$ORIGIN', relpath)))
+            env.Append(RPATH=[
+                    env.Literal(os.path.join('\\$$ORIGIN', relpath))])
             test_bin = super(SystemCTestBin, self).declare(env, objs)
             test_dir = self.dir.Dir(self.reldir)
             for dep in self.test_deps:
