--- a/src/SConscript
+++ b/src/SConscript
@@ -45,10 +45,8 @@ import array
 import bisect
 import functools
 import imp
-import marshal
 import os
 import re
-import subprocess
 import sys
 import zlib
 
@@ -1130,6 +1128,11 @@ env.Command('sim/tags.cc', None,
                        Transform("VER TAGS")))
 env.AlwaysBuild(tags)
 
+# Build a small helper that marshals the Python code using the same
+# version of Python as gem5. This is in an unorthodox location to
+# avoid building it for every variant.
+py_marshal = env.Program('python/marshal.cc')[0]
+
 # Embed python files.  All .py files that have been indicated by a
 # PySource() call in a SConscript need to be embedded into the M5
 # library.  To do that, we compile the file to byte code, marshal the
@@ -1141,17 +1144,22 @@ def embedPyFile(target, source, env):
             return "0"
         return '"%s"' % string
 
-    '''Action function to compile a .py into a code object, marshal
-    it, compress it, and stick it into an asm file so the code appears
-    as just bytes with a label in the data section'''
+    '''Action function to compile a .py into a code object, marshal it,
+    compress it, and stick it into an asm file so the code appears as
+    just bytes with a label in the data section. The action takes two
+    sources:
 
-    src = file(str(source[0]), 'r').read()
+    source[0]: Binary used to marshal Python sources
+    source[1]: Python script to marshal
+    '''
 
-    pysource = PySource.tnodes[source[0]]
-    compiled = compile(src, pysource.abspath, 'exec')
-    marshalled = marshal.dumps(compiled)
+    import subprocess
+
+    marshalled = subprocess.check_output([source[0].abspath, str(source[1])])
+
     compressed = zlib.compress(marshalled)
     data = compressed
+    pysource = PySource.tnodes[source[1]]
     sym = pysource.symname
 
     code = code_formatter()
@@ -1178,7 +1186,7 @@ EmbeddedPython embedded_${sym}(
     code.write(str(target[0]))
 
 for source in PySource.all:
-    env.Command(source.cpp, source.tnode,
+    env.Command(source.cpp, [ py_marshal, source.tnode ],
                 MakeAction(embedPyFile, Transform("EMBED PY")))
     Source(source.cpp, tags=source.tags, add_tags='python')
 
