systemc: Add m5.systemc and m5.tlm python modules.
These will be how systemc and tlm APIs which are not attached to
SimObjects will be exposed. This avoids having to artificially attach
them to wrapping SimObjects for instance, which is a bit awkward
and non-obvious.

The python code which attaches the systemc and tlm modules to the
m5 modules lives in src/python/m5/__init__.py, but the modules
themselves live in src/systemc/python to keep all the systemc code
grouped together. It might be a little confusing to have a small part
of the glue that adds those modules in a separate place (__init__.py),
but that is, as far as I can tell, unavoidable, and it's better in my
opinion to keep the systemc code grouped together than to put it
alongside the other python code and __init__.py.

Change-Id: Iecb218daec5e15772152b5ad22b51f43b86c3d4b
Reviewed-on: https://gem5-review.googlesource.com/c/16563
Reviewed-by: Andreas Sandberg <andreas.sandberg@arm.com>
Maintainer: Gabe Black <gabeblack@google.com>

--- a/src/systemc/python/SConscript
+++ b/src/systemc/python/SConscript
@@ -1,5 +1,4 @@
-# Copyright (c) 2005 The Regents of The University of Michigan
-# All rights reserved.
+# Copyright 2019 Google, Inc.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are
@@ -24,39 +23,12 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
-# Authors: Nathan Binkert
+# Authors: Gabe Black
 
-from __future__ import print_function
-from __future__ import absolute_import
+Import('*')
 
-# Import useful subpackages of M5, but *only* when run as an m5
-# script.  This is mostly to keep backward compatibility with existing
-# scripts while allowing new SCons code to operate properly.
+if not env['USE_SYSTEMC'] or not env['USE_PYTHON']:
+    Return()
 
-try:
-    # Try to import a native module
-    import _m5.core
-
-    # Try to grab something from it in case demandimport is being used
-    _m5.core.curTick
-    in_gem5 = True
-except ImportError:
-    # The import failed, we're being called from the build system
-    in_gem5 = False
-
-if in_gem5:
-    from . import SimObject
-    from . import core
-    from . import defines
-    from . import objects
-    from . import params
-    from . import stats
-    if defines.buildEnv['USE_SYSTEMC']:
-        from . import systemc
-        from . import tlm
-    from . import util
-
-    from .event import *
-    from .main import main
-    from .simulate import *
-
+PySource('m5', 'systemc.py')
+PySource('m5', 'tlm.py')
