--- a/src/dev/net/SConscript
+++ b/src/dev/net/SConscript
@@ -45,6 +45,7 @@
 Import('*')
 
 SimObject('Ethernet.py')
+Source('python.cc', add_tags='python')
 
 # Basic Ethernet infrastructure
 Source('etherbus.cc')
