--- a/src/sim/SConscript
+++ b/src/sim/SConscript
@@ -54,6 +54,7 @@ Source('global_event.cc')
 Source('init.cc', add_tags='python')
 Source('init_signals.cc')
 Source('main.cc', tags='main')
+Source('port.cc')
 Source('root.cc')
 Source('serialize.cc')
 Source('drain.cc')
