dev-arm: Provide a GICv3 ITS Implementation
This patch introduces the GICv3 ITS module, which is in charge of
translating MSIs into physical (GICv3) and virtual (GICv4) LPIs.  The
patch is only GICv3 compliant, which means that there is no direct
virtual LPI injection (this also means V* commands are unimplemented)
Other missing features are:

* No 2level ITS tables (only flat table supported)

* Command errors: when there is an error in the ITS, it is
IMPLEMENTATION DEFINED on how the ITS behaves.  There are three possible
scenarios (see GICv3 TRM) and this implementation only supports one of
these (which is, aborting the command and jumping to the next one).
Furter patches could make it possible to select different reactions

* Invalidation commands (INV, INVALL) are only doing the memory table
walks, assuming the current Gicv3Redistributor is not caching any
configuration table entry.

Change-Id: If4ae9267ac1de7b20a04986a2af3ca3109743211
Signed-off-by: Giacomo Travaglini <giacomo.travaglini@arm.com>
Reviewed-by: Andreas Sandberg <andreas.sandberg@arm.com>
Reviewed-on: https://gem5-review.googlesource.com/c/public/gem5/+/18601
Maintainer: Andreas Sandberg <andreas.sandberg@arm.com>
Tested-by: kokoro <noreply+kokoro@google.com>

--- a/src/dev/arm/SConscript
+++ b/src/dev/arm/SConscript
@@ -61,6 +61,7 @@ if env['TARGET_ISA'] == 'arm':
     Source('gic_v3_cpu_interface.cc')
     Source('gic_v3_distributor.cc')
     Source('gic_v3_redistributor.cc')
+    Source('gic_v3_its.cc')
     Source('pl011.cc')
     Source('pl111.cc')
     Source('hdlcd.cc')
@@ -85,6 +86,7 @@ if env['TARGET_ISA'] == 'arm':
     DebugFlag('GICV2M')
     DebugFlag('Pl050')
     DebugFlag('GIC')
+    DebugFlag('ITS')
     DebugFlag('RVCTRL')
     DebugFlag('EnergyCtrl')
     DebugFlag('UFSHostDevice')
