base: Add a perfect bloom filter
Add a bloom filter that keeps track of all observed entries, and
thus has no false negatives nor false positives.

Change-Id: Iba784e617a99c77554c688470d9b9e12c260f23b
Signed-off-by: Daniel R. Carvalho <odanrc@yahoo.com.br>
Reviewed-on: https://gem5-review.googlesource.com/c/public/gem5/+/18879
Tested-by: kokoro <noreply+kokoro@google.com>
Reviewed-by: Nikos Nikoleris <nikos.nikoleris@arm.com>
Maintainer: Nikos Nikoleris <nikos.nikoleris@arm.com>

--- a/src/base/filters/SConscript
+++ b/src/base/filters/SConscript
@@ -39,3 +39,4 @@ Source('bulk_bloom_filter.cc')
 Source('h3_bloom_filter.cc')
 Source('multi_bit_sel_bloom_filter.cc')
 Source('multi_bloom_filter.cc')
+Source('perfect_bloom_filter.cc')
