--- a/system/arm/dt/Makefile
+++ b/system/arm/dt/Makefile
@@ -1,4 +1,4 @@
-# Copyright (c) 2015-2016, 2019 ARM Limited
+# Copyright (c) 2015-2016, 2019-2020 ARM Limited
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -43,7 +43,9 @@ TARGET_PREFIX=\
 TARGETS=\
 	$(foreach prefix, $(TARGET_PREFIX), $(call CREATE_TARGET, $(prefix))) \
 	armv8_gem5_v1_big_little_2_2.dtb \
-	armv8_gem5_v1_big_little_2_4.dtb
+	armv8_gem5_v1_big_little_2_4.dtb \
+	armv8_gem5_v2_big_little_2_2.dtb \
+	armv8_gem5_v2_big_little_2_4.dtb
 
 VEXPRESS_GEM5_V1_DTSIS=\
 	platforms/vexpress_gem5_v1.dtsi \
@@ -74,6 +76,10 @@ all: $(TARGETS)
 .gen/armv8_gem5_v1_big_little%.dts: armv8_big_little.dts \
 	$(VEXPRESS_GEM5_V1_DTSIS)
 	$(call GEN_DTS,vexpress_gem5_v1.dtsi,$*)
+
+.gen/armv8_gem5_v2_big_little%.dts: armv8_big_little.dts \
+	$(VEXPRESS_GEM5_V2_DTSIS)
+	$(call GEN_DTS,vexpress_gem5_v2.dtsi,$*)
 
 %.dtb: .gen/%.dts
 	$(DTC) -I dts -O dtb -o $@ $<
