--- a/system/arm/dt/platforms/vexpress_gem5_v2_base.dtsi
+++ b/system/arm/dt/platforms/vexpress_gem5_v2_base.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015-2017 ARM Limited
+ * Copyright (c) 2015-2017, 2019 ARM Limited
  * All rights reserved
  *
  * Redistribution and use in source and binary forms, with or without
@@ -39,6 +39,7 @@
 		compatible = "arm,gic-v3";
 		#interrupt-cells = <0x3>;
 		#address-cells = <0x2>;
+		ranges;
 		interrupt-controller;
 		redistributor-stride = <0x0 0x40000>; // 256kB stride
 		reg = <0x0 0x2c000000 0x0 0x10000
