fastmodel: Templatize the xn versions of the CortexA76.
This will make it a lot easier and more succinct to define the x2-x4
versions of that CPU.

Change-Id: I951cd3af4419c62892c57968e729fd11c0e4a59e
Reviewed-on: https://gem5-review.googlesource.com/c/public/gem5/+/21503
Reviewed-by: Giacomo Travaglini <giacomo.travaglini@arm.com>
Maintainer: Giacomo Travaglini <giacomo.travaglini@arm.com>
Tested-by: kokoro <noreply+kokoro@google.com>

--- a/src/arch/arm/fastmodel/CortexA76/SConscript
+++ b/src/arch/arm/fastmodel/CortexA76/SConscript
@@ -32,10 +32,11 @@ if not env['USE_ARM_FASTMODEL'] or env['TARGET_ISA'] != 'arm':
 
 protocol_dir = Dir('..').Dir('protocol')
 
-ArmFastModelComponent(File('CortexA76x1.sgproj'),
-                      File('CortexA76x1.lisa'),
+ArmFastModelComponent(File('x1.sgproj'),
+                      File('x1.lisa'),
                       protocol_dir.File(
                           'ExportedClockRateControlProtocol.lisa')
                       ).prepare_env(env)
-SimObject('FastModelCortexA76x1.py')
-Source('cortex_a76x1.cc')
+SimObject('FastModelCortexA76.py')
+Source('cortex_a76.cc')
+Source('evs.cc')
