--- a/src/arch/arm/fastmodel/CortexA76/SConscript
+++ b/src/arch/arm/fastmodel/CortexA76/SConscript
@@ -32,11 +32,13 @@ if not env['USE_ARM_FASTMODEL'] or env['TARGET_ISA'] != 'arm':
 
 protocol_dir = Dir('..').Dir('protocol')
 
-ArmFastModelComponent(File('x1.sgproj'),
-                      File('x1.lisa'),
-                      protocol_dir.File(
-                          'ExportedClockRateControlProtocol.lisa')
-                      ).prepare_env(env)
+for name in ('x1', 'x2', 'x3', 'x4'):
+    ArmFastModelComponent(Dir(name).File(name + '.sgproj'),
+                          Dir(name).File(name + '.lisa'),
+                          protocol_dir.File(
+                              'ExportedClockRateControlProtocol.lisa')
+                          ).prepare_env(env)
+
 SimObject('FastModelCortexA76.py')
 Source('cortex_a76.cc')
 Source('evs.cc')
