fastmodel: Add VExpressFastmodel platform
A VExpress based platform with FastModelGIC as interrupt controller.

Change-Id: I5ef6d04573d271225d7b39c110e93350a290c371
Reviewed-on: https://gem5-review.googlesource.com/c/public/gem5/+/21359
Reviewed-by: Giacomo Travaglini <giacomo.travaglini@arm.com>
Maintainer: Giacomo Travaglini <giacomo.travaglini@arm.com>
Tested-by: kokoro <noreply+kokoro@google.com>

--- a/src/dev/arm/SConscript
+++ b/src/dev/arm/SConscript
@@ -50,6 +50,8 @@ if env['TARGET_ISA'] == 'arm':
     SimObject('EnergyCtrl.py')
     SimObject('NoMali.py')
     SimObject('VirtIOMMIO.py')
+    if env['USE_ARM_FASTMODEL']:
+	SimObject('VExpressFastmodel.py')
 
     Source('a9scu.cc')
     Source('amba_device.cc')
