tests, base: Added GTests for base/intmath.cc
Testing intmath.hh and intmath.cc. Here is the
list of the functions that are tested.
intmath.isPowerOf2, intmath.power, intmath.floorLog2,
intmath.ceilLog2, intmath.divCeil, intmath.roundUp,
intmath.roundDown. Other functions are not tested,
because they are not currently used and are dead code.

Change-Id: I150ac1b5cead93c6698a8c9e9cec80bd87ef181a
Reviewed-on: https://gem5-review.googlesource.com/c/public/gem5/+/22081
Tested-by: kokoro <noreply+kokoro@google.com>
Reviewed-by: Mahyar Samani <msamani@ucdavis.edu>
Reviewed-by: Bobby R. Bruce <bbruce@ucdavis.edu>
Maintainer: Bobby R. Bruce <bbruce@ucdavis.edu>
Maintainer: Jason Lowe-Power <jason@lowepower.com>

--- a/src/base/SConscript
+++ b/src/base/SConscript
@@ -58,6 +58,7 @@ Source('hostinfo.cc')
 Source('inet.cc')
 Source('inifile.cc')
 GTest('inifile.test', 'inifile.test.cc', 'inifile.cc', 'str.cc')
+GTest('intmath.test', 'intmath.test.cc')
 Source('logging.cc')
 Source('match.cc')
 GTest('match.test', 'match.test.cc', 'match.cc', 'str.cc')
