system-arm: ignore .gen directory that contains DTS files
Those files are removed by default because they are intermediary,
but it is possible to explicitly build them with an explicit target:

make .gen/armv7_gem5_v1_1cpu.dts

Change-Id: Id86968fbb2f2b95ce71109de5a0cb8039a048a27
Reviewed-on: https://gem5-review.googlesource.com/c/public/gem5/+/22825
Reviewed-by: Bobby R. Bruce <bbruce@ucdavis.edu>
Maintainer: Bobby R. Bruce <bbruce@ucdavis.edu>
Tested-by: kokoro <noreply+kokoro@google.com>

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ m5out
 /util/tap/m5tap
 /util/term/m5term
 /system/arm/dt/*.dtb
+/system/arm/dt/.gen
 /system/arm/simple_bootloader/*.o
 /system/arm/simple_bootloader/boot.arm
 /system/arm/simple_bootloader/boot_emm.arm
